# ChessBoard

./: .clang-format  .gitignore  CMakeLists.txt  ChessBoard.sln  README.md
.github/workflows/: codeql.yml  msbuild.yml
ChessBoard/: ChessBoard.sln  ChessBoard.vcxproj  ChessBoard.vcxproj.filters  bishop.cpp  bishop.h  board1.txt  chessboard.cpp  chessboard.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h  rook.cpp  rook.h
